# hskkserv

./: hskkserv.cabal  hskkserv.hs  jisyo2tch.hs
